@@ -502,7 +502,7 @@ with <option>--disable-mem-pools</option>
 </para>
 
 @allocator: the #GAllocator to use when allocating #GList elements.
-@Deprecated: Since 2.10, it does nothing, since #GList has been
+@Deprecated:2.10: It does nothing, since #GList has been
 converted to the <link linkend="glib-Memory-Slices">slice allocator</link>
 
 
@@ -515,8 +515,7 @@ Note that this function is not available if GLib has been compiled
 with <option>--disable-mem-pools</option>
 </para>
 
-@Deprecated: Since 2.10, it does nothing, since #GList has been
+@Deprecated:2.10: It does nothing, since #GList has been
 converted to the <link linkend="glib-Memory-Slices">slice allocator</link>
-
 
 
