@@ -434,7 +434,7 @@ with <option>--disable-mem-pools</option>
 </para>
 
 @dummy: the #GAllocator to use when allocating #GSList elements.
-@Deprecated: Since 2.10, it does nothing, since #GSList has been
+@Deprecated:2.10: It does nothing, since #GSList has been
 converted to the <link linkend="glib-Memory-Slices">slice allocator</link>
 
 
@@ -447,8 +447,7 @@ Note that this function is not available if GLib has been compiled
 with <option>--disable-mem-pools</option>
 </para>
 
-@Deprecated: Since 2.10, it does nothing, since #GSList has been
+@Deprecated:2.10: It does nothing, since #GSList has been
 converted to the <link linkend="glib-Memory-Slices">slice allocator</link>
-
 
 
