@@ -386,20 +386,18 @@ Removes a symbol from a scope.
 
 <!-- ##### MACRO g_scanner_freeze_symbol_table ##### -->
 <para>
-This function is deprecated and will be removed in the next major
-release of GLib. It does nothing.
 </para>
 
 @scanner: a #GScanner.
+@Deprecated:2.2: This macro does nothing.
 
 
 <!-- ##### MACRO g_scanner_thaw_symbol_table ##### -->
 <para>
-This function is deprecated and will be removed in the next major
-release of GLib. It does nothing.
 </para>
 
 @scanner: a #GScanner.
+@Deprecated:2.2: This macro does nothing.
 
 
 <!-- ##### FUNCTION g_scanner_lookup_symbol ##### -->
@@ -564,7 +562,7 @@ Adds a symbol to the default scope.
 @scanner: a #GScanner.
 @symbol: the symbol to add.
 @value: the value of the symbol.
-@Deprecated: Use g_scanner_scope_add_symbol() instead.
+@Deprecated:2.2: Use g_scanner_scope_add_symbol() instead.
 
 
 <!-- ##### MACRO g_scanner_remove_symbol ##### -->
@@ -574,7 +572,7 @@ Removes a symbol from the default scope.
 
 @scanner: a #GScanner.
 @symbol: the symbol to remove.
-@Deprecated: Use g_scanner_scope_remove_symbol() instead.
+@Deprecated:2.2: Use g_scanner_scope_remove_symbol() instead.
 
 
 <!-- ##### MACRO g_scanner_foreach_symbol ##### -->
@@ -585,6 +583,6 @@ Calls a function for each symbol in the default scope.
 @scanner: a #GScanner.
 @func: the function to call with each symbol.
 @data: data to pass to the function.
-@Deprecated: Use g_scanner_scope_foreach_symbol() instead.
+@Deprecated:2.2: Use g_scanner_scope_foreach_symbol() instead.
 
 
