@@ -1129,7 +1129,7 @@ This is an internal function introduced mainly for C marshallers.
 
 @value:   a valid #GValue of type %G_TYPE_STRING
 @v_string: duplicated unowned string to be set
-@Deprecated: Use g_value_take_string() instead.
+@Deprecated:2.4: Use g_value_take_string() instead.
 
 
 <!-- ##### FUNCTION g_value_get_string ##### -->
@@ -1236,7 +1236,7 @@ This is an internal function introduced mainly for C marshallers.
 
 @value:  a valid #GValue of type %G_TYPE_PARAM
 @param: the #GParamSpec to be set
-@Deprecated: Use g_value_take_param() instead.
+@Deprecated:2.4: Use g_value_take_param() instead.
 
 
 <!-- ##### FUNCTION g_value_get_param ##### -->
@@ -1351,7 +1351,7 @@ This is an internal function introduced mainly for C marshallers.
 
 @value:   a valid #GValue of %G_TYPE_BOXED derived type
 @v_boxed: duplicated unowned boxed value to be set
-@Deprecated: Use g_value_take_boxed() instead.
+@Deprecated:2.4: Use g_value_take_boxed() instead.
 
 
 <!-- ##### FUNCTION g_value_get_boxed ##### -->
@@ -1528,7 +1528,7 @@ This is an internal function introduced mainly for C marshallers.
 
 @value:  a valid #GValue of %G_TYPE_OBJECT derived type
 @v_object: object value to be set
-@Deprecated: Use g_value_take_object() instead.
+@Deprecated:2.4: Use g_value_take_object() instead.
 
 
 <!-- ##### FUNCTION g_value_get_object ##### -->
